--- a/web/encontro.xhtml
+++ b/web/encontro.xhtml
@@ -53,11 +53,11 @@
             </div>
             <div class="row" align="center">
                 <div class="col-md-6" align="center">    
-                    <img src="imagens/userFoto.jpg" alt="Imagem do responsável pelo animal" class="circular2" /> <!--FOTO DO RESPONSÁVEL-->
+                    <img src="#{encontroBean.encontro.animal.responsavel.foto}" alt="Imagem do responsável pelo animal" class="circular2" /> <!--FOTO DO RESPONSÁVEL-->
                     <h4>#{encontroBean.encontro.animal.responsavel.nomeUsuario}</h4>
                 </div>
                 <div class="col-md-6" align="center">    
-                    <img src="imagens/userFoto.jpg" alt="Iamgem do adotante" class="circular2"   /> <!--FOTO DO ADOTANTE-->
+                    <img src="#{encontroBean.encontro.adotante.foto}" alt="Iamgem do adotante" class="circular2"   /> <!--FOTO DO ADOTANTE-->
                     <h4>#{encontroBean.encontro.adotante.nomeUsuario}</h4>
                 </div>
             </div>
