--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -105,8 +105,9 @@
         <div class="row featurette">
             <div class="col-md-8 col-md-push-4">
                 <h2 class="featurette-heading">#Denuncie</h2>
-                <p class="lead">texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto </p>
-                <a href="cadastrarDenuncia.jsf" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px;" id="click">Denuncie</a>
+                <p class="lead">Mau tratar animais é crime, previsto em lei com detençao de até um ano e multa! (Lei nº 9.605/98) </p>
+                <p class="lead">Os animais não podem falar. Seja a voz deles! </p>
+                <a href="denuncias.jsf" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px;" id="click">Denuncie</a>
             </div>
             <div class="col-md-4 col-md-pull-8" align="center">
                 <img class="featurette-image img-responsive center-block" src="imagens/logo.png" alt="Generic placeholder image"/>
