--- a/web/animal.xhtml
+++ b/web/animal.xhtml
@@ -106,17 +106,14 @@
                                                 </div>
                                                 <div class="modal-footer">
                                                     <c:if test="#{loginBean.usuarioLogado != null and animalBean.animal.responsavel.idUsuario != loginBean.usuarioLogado.idUsuario}">
-                                                        <p>
-                                                            <h:form>
-                                                                <h:commandLink action="#{animalBean.ExcluirAnimal(animalBean.animal)}" value="Editar" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px;"/>
-                                                            </h:form>
-                                                        </p>
+                                                        <p><a href="#" data-toggle="modal" data-target="#encontro" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px;">Marcar encontro</a></p>
                                                     </c:if>
 
                                                     <c:if test="#{loginBean.usuarioLogado != null and animalBean.animal.responsavel.idUsuario == loginBean.usuarioLogado.idUsuario}">
                                                         <p>
                                                             <h:form>
                                                                 <h:commandLink action="#{animalBean.EditarAnimal(animalBean.animal)}" value="Editar" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px;"/>
+                                                                <h:commandLink action="#{animalBean.ExcluirAnimal(animalBean.animal)}" value="Editar" class="btn btn-danger" style="background-color: #ffa812; color: white;border-radius: 0px;"/>
                                                             </h:form>
                                                         </p>
                                                     </c:if>
