--- a/web/anuncios.xhtml
+++ b/web/anuncios.xhtml
@@ -56,7 +56,7 @@
                 <c:forEach var="anuncio" items="#{anuncioBean.anunciosTop}">
                     <div class="col-xs-18 col-sm-6 col-md-3">
                         <div class="thumbnail caixa">
-                            <img src="imagens/anuncio.jpg" alt="Foto do Anúncio" style="width:100%; height:170px; border-radius: 0px;"/>
+                            <img src="#{anuncio.fotoAnuncio}" alt="Foto do Anúncio" style="width:100%; height:170px; border-radius: 0px;"/>
                             <div class="caption" align="center">
                                 <h5>#{anuncio.tituloAnuncio}</h5>
                                 <div align="left">
@@ -83,7 +83,7 @@
                                                         <div class="col-md-1">
                                                         </div>
                                                         <div class="col-md-5">
-                                                            <img src="imagens/anuncio.jpg" alt="Foto do Anúncio" style="width:100%; height:250px;border-radius: 0px;"/>
+                                                            <img src="#{anuncio.fotoAnuncio}" alt="Foto do Anúncio" style="width:100%; height:250px;border-radius: 0px;"/>
                                                         </div>
                                                         <div class="col-md-5">
                                                             <div align="left">
