--- a/web/meusEventos.xhtml
+++ b/web/meusEventos.xhtml
@@ -44,7 +44,7 @@
                 <c:forEach var="evento" items="#{eventoBean.meusEventos}">
                     <div class="col-xs-18 col-sm-6 col-md-3">
                         <div class="thumbnail caixa">
-                            <img src="imagens/evento.png" alt="Foto do Evento" style="width:100%; height:170px; border-radius: 0px;"/>
+                            <img src="#{evento.fotoEvento}" alt="Foto do Evento" style="width:100%; height:170px; border-radius: 0px;"/>
                             <div class="caption" align="center">
                                 <h5>#{evento.nomeEvento}</h5>
                                 <div align="left">
@@ -70,7 +70,7 @@
                                                         <div class="col-md-1">
                                                         </div>
                                                         <div class="col-md-5">
-                                                            <img src="imagens/evento.png" alt="Foto do Evento" style="width:100%; height:250px;border-radius: 0px;"/>
+                                                            <img src="#{evento.fotoEvento}" alt="Foto do Evento" style="width:100%; height:250px;border-radius: 0px;"/>
                                                         </div>
                                                         <div class="col-md-5">
                                                             <div align="left">
@@ -87,7 +87,9 @@
                                                 <div class="col-md-12" style="padding-top: 20px;">
                                                     <div class="row">
                                                         <div class="col-md-6" align="center" style="padding-bottom: 10px;">
-                                                            <a href="#" class="btn btn-danger " style="border-radius: 0px;"> Excluir</a>
+                                                            <h:form>
+                                                                <h:commandLink action="#{eventoBean.ExcluirEvento(evento)}" value="Excluir" class="btn btn-danger " style="border-radius: 0px;"/>
+                                                            </h:form>
                                                         </div>
                                                         <div class="col-md-6" align="center" style="padding-bottom: 10px;">
                                                             <h:form>
