--- a/web/buscarDenuncia.xhtml
+++ b/web/buscarDenuncia.xhtml
@@ -44,7 +44,7 @@
                 
                 <div class="col-xs-18 col-sm-6 col-md-3">
                     <div class="thumbnail caixa">
-                        <img src="imagens/gato1.png" alt="Foto da Denúncia" style="width:100%; height:170px; border-radius: 0px;"/>
+                        <img src="#{denuncia.fotoDenuncia}" alt="Foto da Denúncia" style="width:100%; height:170px; border-radius: 0px;"/>
                         <div class="caption" align="center">
                             <h5>#{denuncia.tituloDenuncia}</h5>
                             <div align="left">
