--- a/web/editarAnuncio.xhtml
+++ b/web/editarAnuncio.xhtml
@@ -62,7 +62,7 @@
                                         <div class="row">
                                             <div class="col-md-12" align="center">
                                                 <div class="text-center" >
-                                                    <img src="imagens/anuncio.jpg" height="120px" width="160px" style="border-radius: 0px;" alt="Foto do anúncio"/>
+                                                    <img src="#{anuncioBean.anuncio.fotoAnuncio}" height="120px" width="160px" style="border-radius: 0px;" alt="Foto do anúncio"/>
                                                     <h6>Atualizar foto...</h6>
                                                     <h:inputText   class="text-center center-block well well-sm"/>
                                                 </div>
