--- a/web/meusAnuncios.xhtml
+++ b/web/meusAnuncios.xhtml
@@ -64,7 +64,7 @@
                                                         <div class="col-md-1">
                                                         </div>
                                                         <div class="col-md-5">
-                                                            <img src="imagens/anuncio.jpg" alt="Foto do Anúncio" style="width:100%; height:250px;border-radius: 0px;"/>
+                                                            <img src="#{anuncio.fotoAnuncio}" alt="Foto do Anúncio" style="width:100%; height:250px;border-radius: 0px;"/>
                                                         </div>
                                                         <div class="col-md-5">
                                                             <div align="left">
