--- a/web/buscarEvento.xhtml
+++ b/web/buscarEvento.xhtml
@@ -42,7 +42,7 @@
                 <c:forEach var="evento" items="#{eventoBean.eventos}">
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="thumbnail caixa">
-                            <img src="imagens/evento.png" alt="Foto do Evento" style="width:100%; height:170px; border-radius: 0px;"/>
+                            <img src="#{evento.fotoEvento}" alt="Foto do Evento" style="width:100%; height:170px; border-radius: 0px;"/>
                             <div class="caption" align="center">
                                 <h5>#{evento.nomeEvento}</h5>
                                 <div align="left">
